test/negative/afteruntil03.cfr
// Test for after until constraint

a
 b ?
  c ?
  d ?
  e ?
  [a after d until  ]


